# cpp-bn-umtaker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.cmake  protoc.cmake
config/: actuary_config.json.sample  benchmark_inst_config.json.sample  benchmark_inst_config_difficult.json.sample  evaluator_config.json.sample  follower_inst_config.json.sample  follower_inst_config_difficult.json.sample  inst_config.json.sample  main_config.json  main_config.json.sample  receiver_config.json.sample  trader_config.json.sample
docs/: create_table.sql  grafana_dashboard.sql
src/: bn_umtaker_actuary.cpp  bn_umtaker_evaluator.cpp  bn_umtaker_receiver.cpp  bn_umtaker_submitter.cpp  bn_umtaker_trader.cpp  main.cpp
src/actuary/: account_container.cpp  account_container.h  account_prepare.cpp  account_prepare.h  account_processor.cpp  account_processor.h  basic_container.h  common_container.h  dynamic_config.cpp  dynamic_config.h  global_context.cpp  global_context.h  market_processor.cpp  market_processor.h  risk_control.cpp  risk_control.h  stat_dispatch.cpp  stat_dispatch.h  strategy_processor.cpp  strategy_processor.h
src/common/: auto_reset_counter.cpp  auto_reset_counter.h  common.h  constant.h  random.cpp  random.h  shm_udp_ticker.container.h  threshold_container.cpp  threshold_container.h  tools.cpp  tools.h
src/config/: actuary_config.cpp  actuary_config.h  config.cpp  config.h  config_main.cpp  config_main.h  evaluator_config.cpp  evaluator_config.h  inst_config.cpp  inst_config.h  main_config.cpp  main_config.h  receiver_config.cpp  receiver_config.h  trader_config.cpp  trader_config.h
src/dbsource/: mysql_source.cpp  mysql_source.h
src/evaluator/: global_context.cpp  global_context.h  order_container.cpp  order_container.h  order_stat_manager.cpp  order_stat_manager.h  ticker_container.cpp  ticker_container.h  ticker_subscribe.cpp  ticker_subscribe.h  zmq_subscribe.cpp  zmq_subscribe.h
src/logger/: logger.h
src/proto/: ticker_info.proto
src/protocol/: empty.h  ticker_info.pb.cc  ticker_info.pb.h
src/receiver/: basic_container.cpp  basic_container.h  global_context.cpp  global_context.h  offset_container.cpp  offset_container.h  ticker_calculate.cpp  ticker_calculate.h  ticker_container.cpp  ticker_container.h  ticker_subscribe.cpp  ticker_subscribe.h
src/shm/: order_shm.cpp  order_shm.h  share_memory_mng.cpp  share_memory_mng.h  threshold_shm.cpp  threshold_shm.h  ticker_shm.cpp  ticker_shm.h
src/tgbot/: api.cpp  api.h
src/trader/: basic_container.h  global_context.cpp  global_context.h  order_limiter.cpp  order_limiter.h  service_container.cpp  service_container.h  service_manager.cpp  service_manager.h  trade_processor.cpp  trade_processor.h
src/zmq/: zmq_client.h
